# PureSort

./: .gitignore
slack-bot/: .env.example  Dockerfile  Dockerfile.lambda  README.md  app.py  cdk.json  cloudformation.yaml  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
slack-bot/app/: Dockerfile  app.py
slack-bot/app/listeners/: __init__.py
slack-bot/app/listeners/assistant/: assistant.py
slack-bot/app/utils/: secrets_manager.py
slack-bot/infra/: cloudformation.yaml
slack-bot/infrastructure/: app.py  requirements.txt
slack-bot/infrastructure/stacks/: slack_agent_stack.py  slack_bot_stack.py
slack-bot/listeners/assistant/: llm_caller.py
slack-bot/listeners/events/: __init__.py
slack-bot/scripts/: build-and-deploy.sh  deploy.py
slack-bot/slack_agent/: main.py  pyproject.toml
slack-bot/slack_agent/.langgraph_api/: .langgraph_ops.pckl
slack-bot/slack_app/: pyproject.toml
slack-bot/slack_app/listeners/events/: new_message.py
