[project]
name = "slack-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.18.1",
    "black>=25.1.0",
    "boto3>=1.38.23",
    "botocore>=1.38.23",
    "dotenv>=0.9.9",
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "slack-bolt>=1.21,<2",
    "slack-sdk>=3.33.1,<4",
]
